# libAGML

./: CMakeLists.txt  Readme.txt  configure
doc/: agml.html  agml_gui.html  agml_syntax.html  agmld.html  bib.html  build.html  developper.html  formats.html  index.html  nodes_classes.html  tutorial_1.html  tutorial_2.html  tutorial_3.html  tutorial_4.html  user.html
doc/style/: a.css
examples/: kmeans_multiple_hosts.model  kmeans_multiple_hosts.sh  kmeans_single_host.model  kmeans_single_host.sh
src/agml/: channels.h
src/agml/com/: message.cpp  message.h
src/agml/math/: Matrix.cpp  Matrix.h  math.cpp  math.h
src/agml/nodes/: NodeExample.cpp
src/agml/nodes/basic/: NodeAvg.cpp
src/agml/nodes/data/: NodeData.cpp  NodeDataFile.cpp  NodeDataRand.cpp
src/agml/test/: NodeTestMatrix.cpp  NodeTestMsgMatrix.cpp
src/agml_client/: agml.cpp
src/agml_node_clustering/: NodeEM.cpp  NodeKMeans.cpp
src/agml_node_clustering/eval/: NodeEvalKMeans.cpp
src/agml_server/: agmld.cpp
src/libagml_comm/agml/: node.cpp  node.h
src/libagml_comm/client/: Client.cpp  Client.h
src/libagml_comm/common/: Commands.cpp  Commands.h  Host.cpp  Host.h  Message.cpp  Message.h  com.cpp  com.h
src/libagml_comm/server/: Server.cpp  Server.h
src/libagml_comm/simulation/: Thread.cpp  Thread.h
src/libagml_comm/tcp/: Server.cpp  Server.h  Socket.cpp  Socket.h
src/libagml_comm/topology/: DataHost.cpp  DataHost.h  Info.cpp  Info.h  NodeGroup.cpp  NodeGroup.h  NodeLibrary.cpp  NodeLibrary.h  Topology.cpp  Topology.h  TopologyReader.cpp  TopologyReader.h
src/libagml_comm/util/: array.h  fifo.h  file.cpp  file.h  func_ptr.h  string.cpp  string.h  utils.cpp  utils.h
